--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,7 @@ footer {
   margin-top: 30px;
 
   color: var(--primary-white-color);
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.42px;
